added is_public filter to use in the site template

--- a/blink_sass/basic.sass
+++ b/blink_sass/basic.sass
@@ -178,7 +178,8 @@ nav
     margin-left: 5px
 .space-right-5
     margin-right: 5px
-
+.img-fluid
+    width: 100%
 /********************************************
  * Logout Modal
  *******************************************/
