--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -18,45 +18,51 @@
 
     <section class="panel panel-default">
         <div class="panel-heading">
-            <p><a href="{% url 'sample_analyses' %}">Sample Analyses</a> can be customized with the specific data you want to analyze. Start a new workbook with an analysis below.</p>
+            <a role="button" data-target="#analysis-body" data-toggle="collapse" aria-expanded="true" aria-controls="analysis-body">
+                <i class="fa fa-caret-down" style="display: inline-block;"></i>
+            </a>
+            <a href="{% url 'sample_analyses' %}">Sample Analyses</a> can be customized with the specific data you want to analyze. Start a new workbook with an analysis below.
         </div>
-        <div class="panel-body">
-            <ul class="analysis-list">
-                <li class="analysis">
-                    <!--TODO: get bar chart-->
-                    <img src="{% static 'img/histogram.png' %}">
-                    <p>Bar Chart</p>
-                </li>
-                <li class="analysis">
-                    <!--TODO: get bar chart-->
-                    <img src="{% static 'img/histogram.png' %}">
-                    <p>Histogram</p>
-                </li>
-                <li class="analysis">
-                    <!--TODO: get bar chart-->
-                    <img src="{% static 'img/histogram.png' %}">
-                    <p>Scatter Plot</p>
-                </li>
-                <li class="analysis">
-                    <!--TODO: get bar chart-->
-                    <img src="{% static 'img/histogram.png' %}">
-                    <p>Violin Plot</p>
-                </li>
-                <li class="analysis">
-                    <!--TODO: get bar chart-->
-                    <img src="{% static 'img/histogram.png' %}">
-                    <p>Violin Plot 2</p>
-                </li>
-                <li class="analysis">
-                    <!--TODO: get bar chart-->
-                    <img src="{% static 'img/histogram.png' %}">
-                    <p>Cubby Hole</p>
-                </li>
-                <li class="analysis">
-                    <img src="{% static 'img/histogram.png' %}" alt="">
-                    <p>SeqPeak</p>
-                </li>
-            </ul>
+        <div class="panel-body collapse in" id="analysis-body">
+            <div class="list-carousel">
+                <ul class="list-holder">
+                    <li class="item">
+                        <!--TODO: get bar chart-->
+                        <img class="img-fluid" src="{% static 'img/histogram.png' %}">
+                        <p>Bar Chart</p>
+                    </li>
+                    <li class="item">
+                        <img class="img-fluid" src="{% static 'img/histogram.png' %}">
+                        <p>Histogram</p>
+                    </li>
+                    <li class="item">
+                        <!--TODO: get bar chart-->
+                        <img class="img-fluid" src="{% static 'img/scatter-plot.png' %}">
+                        <p>Scatter Plot</p>
+                    </li>
+                    <li class="item">
+                        <!--TODO: get bar chart-->
+                        <img class="img-fluid" src="{% static 'img/violin-plot.png' %}">
+                        <p>Violin Plot</p>
+                    </li>
+                    <li class="item">
+                        <!--TODO: get bar chart-->
+                        <img class="img-fluid" src="{% static 'img/histogram.png' %}">
+                        <p>Violin Plot 2</p>
+                    </li>
+                    <li class="item">
+                        <!--TODO: get bar chart-->
+                        <img class="img-fluid" src="{% static 'img/histogram.png' %}">
+                        <p>Cubby Hole</p>
+                    </li>
+                    <li class="item">
+                        <img class="img-fluid" src="{% static 'img/seqpeak.png' %}" alt="">
+                        <p>SeqPeak</p>
+                    </li>
+                </ul>
+                <div class="before"><i class="fa fa-angle-left fa-2x"></i></div>
+                <div class="after"><i class="fa fa-angle-right fa-2x"></i></div>
+            </div>
         </div>
     </section>
     <section class="panel panel-default">
@@ -65,10 +71,20 @@
         </div>
         <div class="panel-body">
             <p>Workbooks store the Analyses you create -- and their related data.</p>
-            <ul>
+            <ul class="table-list">
             {% if user.workbook_last_view_set.all|length > 0 %}
-                {% for wlv in user.workbook_last_view_set.all  %}
-                    <li><a href="{% url 'workbook_detail' wlv.workbook.id %}">{{ wlv.workbook.name }}</a></li>
+                {% for wlv in user.workbook_last_view_set.all|dictsortreversed:'last_view'  %}
+                    <li>
+                        <a href="{% url 'workbook_detail' wlv.workbook.id %}">
+                            <div class="list-main">
+                                <h5 class="list-title">{{ wlv.workbook.name|title }}</h5>
+                                <p>{{ wlv.workbook.description }}</p>
+                            </div>
+                            <div class="list-info">
+                               {{ wlv.workbook.last_date_saved }}
+                            </div>
+                        </a>
+                    </li>
                 {% endfor %}
             {% endif %}
             </ul>
@@ -78,20 +94,27 @@
                 {% csrf_token %}
                  <button type="submit" class="btn btn-primary" ><i class="fa fa-plus"></i>Create a New Workbook</button>
              </form>
-            <a class="btn btn-plain" href="{% url 'workbooks' %}">Sample Workbooks</a>
+            <a class="btn btn-link" href="{% url 'workbooks' %}">Sample Workbooks</a>
         </div>
     </section>
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <section class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Gene Favorites ({{ user.genefavorite_last_view_set.all|active:'genefavorite'|length }})</h3>
                 </div>
                 <div class="panel-body">
                     {% if user.genefavorite_last_view_set.all|active:'genefavorite'|length > 0 %}
+                    <ul class="table-list">
                         {% for glv in user.genefavorite_last_view_set.all|active:'genefavorite' %}
-                            {{ glv.genefavorite.name }}
+                        <li>
+                            <a href="{% url 'genes_detail' glv.genefavorite.id %}">
+                               <span class="list-title">{{ glv.genefavorite.name }}</span>
+                            </a>
+                        </li>
+
                         {% endfor %}
+                    </ul>
                     {% else %}
                     <p>You don't have any saved Gene Favorites.</p>
                     <a href="{% url 'create_genes_list' %}">Create Gene Favorites</a>
@@ -104,9 +127,15 @@
                 </div>
                 <div class="panel-body">
                     {% if user.variablefavorite_last_view_set.all|active:'variablefavorite'|length > 0 %}
-                    <ul>
+                    <ul class="table-list">
                         {% for vlv in user.variablefavorite_last_view_set.all|active:'variablefavorite' %}
-                           <li><a href="{% url 'variable_fav_detail' vlv.variablefavorite.id %}">{{ vlv.variablefavorite.name }}</a></li>
+                           <li>
+                               <a href="{% url 'variable_fav_detail' vlv.variablefavorite.id %}">
+                                   <span class="list-title">
+                                       {{ vlv.variablefavorite.name }}
+                                   </span>
+                               </a>
+                           </li>
                         {% endfor %}
                     </ul>
                     {% else %}
@@ -122,10 +151,23 @@
                 </div>
                 <div class="panel-body">
                     {% if user.cohort_last_view_set.all|active:'cohort'|length > 0 %}
-                    <ul>
-                        {% for clv in user.cohort_last_view_set.all|active:'cohort' %}
-                           <li><a href="{% url 'cohort_details' clv.cohort.id %}">{{ clv.cohort.name }}</a></li>
+                    <ul class="table-list">
+                        {% for clv in user.cohort_last_view_set.all|active:'cohort'|dictsortreversed:'last_view'|slice:':5' %}
+                           <li>
+                               <a href="{% url 'cohort_details' clv.cohort.id %}">
+                                   <div class="list-main">
+                                       <span class="list-title">{{ clv.cohort.name }}</span>
+                                   </div>
+
+                                   <div class="list-info">
+                                       <span>{{ clv.cohort.last_date_saved }}</span>
+                                   </div>
+                               </a>
+                           </li>
                         {% endfor %}
+                        {% if user.cohort_last_view_set.all|active:'cohort'|length > 5 %}
+                            <li><a href="{% url 'cohort_list' %}">View all</a></li>
+                        {% endif %}
                     </ul>
                     {% else %}
                     <p>You don't have any saved Cohorts.</p>
@@ -134,7 +176,7 @@
                 </div>
             </section>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <section class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Saved Projects ({{ user.project_last_view_set.all|active:'project'|length }})</h3>
@@ -142,9 +184,17 @@
                 <div class="panel-body">
                     <p>You can upload from your own research projects.</p>
                     {% if user.project_last_view_set.all|active:'project'|length > 0 %}
-                    <ul>
+                    <ul class="table-list">
                         {% for plv in user.project_last_view_set.all|active:'project'|slice:'6' %}
-                           <li><a href="{% url 'project_detail' plv.project.id %}">{{ plv.project.name }}</a></li>
+                           <li>
+                               <a href="{% url 'project_detail' plv.project.id %}">
+                                   <span class="list-title">{{ plv.project.name }}</span>
+                                   {% if plv.project.description %}
+                                    <p>{{ plv.project.description }}</p>
+                                   {% endif %}
+                               </a>
+
+                           </li>
                         {% endfor %}
                     </ul>
                     {% endif %}
@@ -153,12 +203,12 @@
                     {% endif %}
                 </div>
                 <div class="panel-footer">
-                    <button class="btn btn-default"><i class="fa fa-upload"></i>Upload Project Data</button>
+                    <button class="btn btn-primary"><i class="fa fa-cloud-upload"></i>Upload Project Data</button>
                 </div>
             </section>
             <section class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Public Data(25)</h3>
+                    <h3 class="panel-title">Public Data ({{ user.project_last_view_set.all|active:'project'|is_public:'project'|length }})</h3>
                 </div>
                 <div class="panel-body">
                     <p>Browse publicly-available studies and data</p>
