--- a/blink_sass/components/_panel.sass
+++ b/blink_sass/components/_panel.sass
@@ -10,6 +10,9 @@
       color: inherit
       text-decoration: none
 
+  &-body
+    overflow: hidden
+
   &-primary
     .panel-heading .dropdown
       > a
