--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -120,7 +120,7 @@
                     {% endif %}
                     <li class="menu-item"><a href="{% url 'projects' %}">Saved Projects ( {{ user.project_last_view_set.all|active:'project'|length }}  )</a></li>
                     <li class="menu-item"><a href="{% url 'project_upload' %}">Upload Project Data</a></li>
-                    <li class="menu-item"><a href="{% url 'projects' %}">Public Projects (1)</a></li>
+                    <li class="menu-item"><a href="{% url 'projects' %}">Public Projects ({{ user.project_last_view_set.all|active:'project'|is_public:'project'|length}})</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
