--- a/templates/GenespotRE/sample_analyses.html
+++ b/templates/GenespotRE/sample_analyses.html
@@ -25,9 +25,11 @@
                     <img class="img-fluid" src="{% static 'img/histogram.png' %}" alt="Bar Chart">
                     <h5>Bar Chart</h5>
                     <p>Short Description</p>
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST">
+                </div>
+                <div class="panel-footer">
+                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-default">Start A New Workbook Bar Chart</button>
+                        <button type="submit" class="btn btn-link">Start A New Workbook Bar Chart</button>
                     </form>
                 </div>
             </div>
@@ -38,9 +40,11 @@
                     <img class="img-fluid" src="{% static 'img/histogram.png' %}" alt="Histogram">
                     <h5>Histogram</h5>
                     <p>Short Description</p>
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST">
+                </div>
+                <div class="panel-footer">
+                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-default">Start A New Workbook with Histogram</button>
+                        <button type="submit" class="btn btn-link">Start A New Workbook with Histogram</button>
                     </form>
                 </div>
             </div>
@@ -51,9 +55,11 @@
                     <img class="img-fluid" src="{% static 'img/histogram.png' %}" alt="Scatter Plot">
                     <h5>Scatter Plot</h5>
                     <p>Short Description</p>
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST">
+                </div>
+                <div class="panel-footer">
+                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-default">Start A New Workbook with Scatter Plot</button>
+                        <button type="submit" class="btn btn-link">Start A New Workbook with Scatter Plot</button>
                     </form>
                 </div>
             </div>
@@ -64,9 +70,11 @@
                     <img class="img-fluid" src="{% static 'img/histogram.png' %}" alt="Violin Plot">
                     <h5>Violin Plot</h5>
                     <p>Short Description</p>
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST">
+                </div>
+                <div class="panel-footer">
+                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-default">Start A New Workbook with Violin Plot</button>
+                        <button type="submit" class="btn btn-link">Start A New Workbook with Violin Plot</button>
                     </form>
                 </div>
             </div>
@@ -77,9 +85,11 @@
                     <img class="img-fluid" src="{% static 'img/histogram.png' %}" alt="Violin Plot 2">
                     <h5>Violin Plot 2</h5>
                     <p>Short Description</p>
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST">
+                </div>
+                <div class="panel-footer">
+                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-default">Start A New Workbook with Violin Plot 2</button>
+                        <button type="submit" class="btn btn-link">Start A New Workbook with Violin Plot 2</button>
                     </form>
                 </div>
             </div>
@@ -90,9 +100,11 @@
                     <img class="img-fluid" src="{% static 'img/histogram.png' %}" alt="Cubby Hole">
                     <h5>Cubby Hole</h5>
                     <p>Short Description</p>
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST">
+                </div>
+                <div class="panel-footer">
+                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-default">Start A New Workbook with Cubby Hole</button>
+                        <button type="submit" class="btn btn-link">Start A New Workbook with Cubby Hole</button>
                     </form>
                 </div>
             </div>
@@ -103,9 +115,11 @@
                     <img class="img-fluid" src="{% static 'img/seqpeak.png' %}" alt="SeqPeak">
                     <h5>SeqPeak</h5>
                     <p>This visualization shows where somatic mutations have been observed on a linear representation of a specific protein.  Each horizontal strip represents the protein, with data from different tumor types (aka cohorts or studies) shown stacked one on top of the other. </p>
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST">
+                </div>
+                <div class="panel-footer">
+                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-default">Start A New Workbook with SeqPeak</button>
+                        <button type="submit" class="btn btn-link">Start A New Workbook with SeqPeak</button>
                     </form>
                 </div>
             </div>
