added variable detail template

--- a/blink_sass/components/_listgroup.sass
+++ b/blink_sass/components/_listgroup.sass
@@ -87,4 +87,4 @@
     margin-bottom: 1px
     border-left: 3px solid $isb-warning
     &:hover
-      background: $info-bgcolor
+      background: lighten($info-bgcolor, 3%)
