--- a/templates/variables/variable_list_modals.html
+++ b/templates/variables/variable_list_modals.html
@@ -4,13 +4,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Delete this favorite list "{{ favorite.name }}"?</h4>
+                <h4 class="modal-title">Delete this variable favorite "{{ favorite.name|title }}"?</h4>
             </div>
-            <form id="delete-workbook" method="POST" action="{% url 'workbook_delete' favorite.id %}">
+            <form id="delete-workbook" method="POST" action="{% url variable_fav_delete' favorite.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <input type="submit" value="Delete" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
@@ -23,7 +23,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Create a new workbook using the variable favorite list "{{ favorite.name }}"</h4>
+                <h4 class="modal-title">Create a new workbook using the variable favorite "{{ favorite.name|title }}"</h4>
             </div>
             <form id="edit-workbook" method="POST" action="{% url 'variable_fav_edit' favorite.id %}">
                 {% csrf_token %}
@@ -32,8 +32,8 @@
                     <input class="form-control" type="text" name="name" value="{{ favorite.name }}"/>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <input type="submit" value="Create Workbook" class="btn btn-primary" />
+                    <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
